--- a/contributions.html
+++ b/contributions.html
@@ -17,10 +17,11 @@
     <![endif]-->
   </head>
   <body>
-    <h1 class="text-center">Observations by project</h1>
+    <h1 class="text-center">All Contributions</h1>
+    <h2 id="proj_title" class="text-center"></h2>
     <div id="obsDiv">
-      <table class="table">
-        <thead><td>Contributor</td><td>Contributions</td></thead>
+      <table class="table table-striped table-hover table-condensed">
+        <thead><td>Contributor</td><td>Photos contributed</td></thead>
         <tbody>
         </tbody>
       </table>
@@ -31,9 +32,27 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="ol3/resources/bootstrap/js/bootstrap.min.js"></script>
     <script>
+      // Helper functions
+      function getUrlParameter(sParam)
+      {
+          var sPageURL = window.location.search.substring(1);
+          var sURLVariables = sPageURL.split('&');
+          for (var i = 0; i < sURLVariables.length; i++) 
+          {
+              var sParameterName = sURLVariables[i].split('=');
+              if (sParameterName[0] == sParam) 
+              {
+                  return sParameterName[1];
+              }
+          }
+      }
+
+      // Project ID: passed in URL or default to 1
+      var proj_id = getUrlParameter('id') || 'ncjp';
+
       $().ready(function(){
         // TODO: parameterise the dataset_id
-        var url = "https://groundtruth.cartodb.com/api/v2/sql?filename=fc_observations&q=SELECT+cartodb_id,feature_id,date_time,form_data::json->>'photo'+as+photo,form_data::json->>'credit'+as+credit+FROM+public.fc_observations+f+WHERE+f.dataset_id='vmplan_plan_overlay_ho_331'&format=json";
+        var url = "https://groundtruth.cartodb.com/api/v2/sql?q=SELECT+p.title,f.cartodb_id,f.feature_id,f.date_time,f.form_data::json->>'photo'+as+photo,f.form_data::json->>'credit'+as+credit+FROM+public.fc_observations+f,fc_projects+p+WHERE+f.dataset_id=p.dataset_id+AND+p.key='"+proj_id+"'&format=json";
 
         var arr = [];
         var compareByContribNb = function(a,b){
@@ -57,6 +76,10 @@
           function(data){
             //
             console.log(data.rows);
+
+            // Setting up the title
+            $('#proj_title').html(data.rows[0].title);
+
             // Build an array suitable for the table of contributions
             // element: {"contributor name": ["img1", "img2", ... , "imgn"]}
             var new_obj={};
