Minor wording changes

--- a/website/index.html
+++ b/website/index.html
@@ -280,7 +280,7 @@ body {
         <blockquote>
         <p><em>develop a great entrepreneurial and creative app that makes use of spatial technology and open data on a smartphone app platform.</em></p>
         </blockquote>
-        <p class="lead">In late October 2014, we brainstormed ideas about how we could use the concept of capturing photos from a phone (a feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
+        <p class="lead">We brainstormed ideas about how we could use the concept of capturing photos from a phone (a feature in modern mobile browsers) and how it could relate to <em>open data</em>. <strong>Field Correspondent</strong> was born.</p>
       </div>
 
       <hr class="featurette-divider">
@@ -288,7 +288,7 @@ body {
       <div class="featurette">
         <img class="featurette-image pull-left" src="img/gps-grey.png">
         <h2 class="featurette-heading">Data capture. <span class="text-muted">Simplified.</span></h2>
-        <p class="lead"><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from a mobile device. No app installation required.</p>
+        <p class="lead"><strong>Field Correspondent</strong> enables you and the people you invite to capture photos and other information about places you care about - directly from your phone. No app installation required.</p>
       </div>
 
       <hr class="featurette-divider">
